# fastapi-template

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
fastapi_template/: __init__.py  __main__.py  wsgi.py
fastapi_template/app/: asgi.py
fastapi_template/app/api/: deps.py  router.py
fastapi_template/app/api/controller/: auth_controller.py  file_controller.py  role_controller.py  user_controller.py
fastapi_template/app/common/: __init__.py
fastapi_template/app/core/: __init__.py  inferring_router.py  result.py  static.py
fastapi_template/app/core/auth/: security.py
fastapi_template/app/core/db/: __init__.py  session.py
fastapi_template/app/core/log/: __init__.py  log.py  logging.py  logging_config.json
fastapi_template/app/crud/: __init__.py  base_crud.py  file_crud.py  role_crud.py  user_crud.py  user_role_crud.py
fastapi_template/app/entity/: auth_entity.py  base_entity.py  common_entity.py  file_entity.py  role_entity.py  user_entity.py  user_role_entity.py
fastapi_template/app/exception/: __init__.py  handler.py  http.py  status.py
fastapi_template/app/middleware/: middleware.py  security_middleware.py
fastapi_template/app/model/: __init__.py  base_model.py  file_model.py  logging_model.py  menu_model.py  model.py  project_member_model.py  project_model.py  role_model.py  setting_model.py  user_model.py  user_role_model.py
fastapi_template/app/schema/: auth_schema.py  base_schema.py  file_schema.py  role_schema.py  user_role_schema.py  user_schema.py
fastapi_template/app/service/: __init__.py  auth_service.py  file_service.py  role_service.py  user_service.py
fastapi_template/app/util/: models_map_entity.py  partial.py  snowflake.py
fastapi_template/cli/: __init__.py  cli.py  serve.py
fastapi_template/config/: __init__.py  constants.py  gunicorn.py  redis.py  role.py  settings.py
tests/: base_test.py  test_base_crud.py  test_snowflake.py
