[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "Fast template to create fastapi customazied api"
authors = ["Walter Hu <changyhu@tesla.com>"]
readme = "README.md"
packages = [{ include = "fastapi_template" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10.8"
fastapi = "^0.87.0"
uvicorn = { version = "^0.20.0", extras = ["standard"] }
gunicorn = "^20.1.0"
rich = "^12.6.0"
orjson = "^3.8.2"
python-multipart = "^0.0.5"
sqlmodel = "^0.0.8"
aiosqlite = "^0.17.0"
structlog = "^22.2.0"
asgi-correlation-id = "^3.2.1"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
fastapi-pagination = "^0.10.0"
fastapi-cache2 = "^0.1.9"
asyncer = "^0.0.2"
apscheduler = "^3.9.1.post1"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
pre-commit = "2.20.0"


[tool.poetry.scripts]
serve = 'fastapi_template.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
